# AHDProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AHDExample/: CMakeLists.txt
AHDExample/include/AHDExample/: AHDExample.h
AHDExample/src/: AHDExample.cpp
AHDOpenCV/: CMakeLists.txt  main.cpp
AHDOpenGL/: CMakeLists.txt  main.cpp  stb_image.cpp
AHDOpenGL/include/AHDOpenGL/: mesh.h  model.h
AHDQtProject/: CMakeLists.txt  main.cpp
FilamentDemo/: CMakeLists.txt
FilamentDemo/src/: main.cpp
cmake/: CMakeLists.txt
cmake/modules/: FindASSIMP.cmake  FindFilament.cmake  FindGLAD.cmake  FindGLFW3.cmake  FindGLM.cmake
docs/: gitSubmodule.md
res/shaders/: final_output.frag  light_cube.frag  model.vert  triangle.frag  triangle.vert
res/shaders/pbr/: pbr-brdf.frag  pbr.frag
tests/: CMakeLists.txt
tests/AHDExampleTest/: CMakeLists.txt  unit_tests.cpp
